syntax="proto3";

package auth_service;

service AuthService {
    rpc StaffLogin(StaffLoginRequest) returns (AuthResponse){}
    rpc StaffSignUp(StaffSignUpRequest) returns (AuthResponse){}
    rpc StaffResetPassword(StaffResetPasswordRequest) returns (Empty){}
}

message Empty {}

message AuthResponse {
    string id = 1;
    string role = 2;
    string branchId = 3;
}

message StaffLoginRequest {
    string username = 1;
    string password = 2;
    string phoneNumber = 3;
}

message StaffSignUpRequest {
    string name = 1;
    string username = 2;
    string password = 3;
    string phoneNumber = 4;
    string role = 5;
    string branchId = 6;
}

message StaffResetPasswordRequest {
    string staffID = 1;
    string newPassword = 2;
}